--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <nav id="bottomnav">
         <a href="#home" class="active">Home</a>
         <a href="#about">About Me</a>
-        <a href="#work">My worsk</a>
+        <a href="#work">My works</a>
         <a href="#contact">Contact Me</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
